--- a/NuGet/Package.Forms.nuspec
+++ b/NuGet/Package.Forms.nuspec
@@ -2,29 +2,29 @@
 <package >
   <metadata>
     <id>Microcharts.Forms</id>
-    <version>0.9.5.9</version>
+    <version>1.0.0</version>
     <title>Microcharts for Xamarin.Forms</title>
-    <authors>Aloïs Deniel, Ed Lomonaco</authors>
-    <owners>Aloïs Deniel, Ed Lomonaco</owners>
+    <authors>AxioCode, Aloïs Deniel, Ed Lomonaco</authors>
+    <owners>AxioCode</owners>
     <license type="expression">MIT</license>
-    <projectUrl>https://github.com/dotnet-ad/Microcharts</projectUrl>
+    <projectUrl>https://github.com/AxioCode/Microcharts</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Simple, cross-platform chart library.</description>
-    <copyright>Copyright 2020</copyright>
-    <tags>xamarin.forms chart skia</tags>
+    <description>Customized version of Microcharts from https://github.com/dotnet-ad/Microcharts</description>
+    <copyright>AxioCode © 2020</copyright>
+    <tags>xamarin forms ios android chart skia</tags>
     <dependencies>
-        <group targetFramework="netstandard2.0">
-            <dependency id="Microcharts" version="0.9.5.9" />
-            <dependency id="SkiaSharp" version="2.80.2" />
-            <dependency id="SkiaSharp.Views.Forms" version="2.80.2" />
-            <dependency id="System.ValueTuple" version="4.5.0" />
-            <dependency id="Xamarin.Forms" version="4.7.0.1351" />
-        </group>
+      <group targetFramework="netstandard2.0">
+        <dependency id="Microcharts" version="0.9.5.9" />
+        <dependency id="SkiaSharp" version="2.80.2" />
+        <dependency id="SkiaSharp.Views.Forms" version="2.80.2" />
+        <dependency id="System.ValueTuple" version="4.5.0" />
+        <dependency id="Xamarin.Forms" version="5.0.0.1905" />
+      </group>
     </dependencies>
   </metadata>
-   <files>
-     <!-- .NET Standard 2.0 -->
-     <file src="..\Sources\Microcharts\bin\Release\netstandard2.0\Microcharts.dll" target="lib\netstandard2.0\Microcharts.dll"/>
-     <file src="..\Sources\Microcharts.Forms\bin\Release\netstandard2.0\Microcharts.Forms.dll" target="lib\netstandard2.0\Microcharts.Forms.dll"/>
-   </files>
+  <files>
+    <!-- .NET Standard 2.0 -->
+    <file src="..\Sources\Microcharts\bin\Release\netstandard2.0\Microcharts.dll" target="lib\netstandard2.0\Microcharts.dll"/>
+    <file src="..\Sources\Microcharts.Forms\bin\Release\netstandard2.0\Microcharts.Forms.dll" target="lib\netstandard2.0\Microcharts.Forms.dll"/>
+  </files>
 </package>
