--- a/Sources/Microcharts.Forms/Microcharts.Forms.csproj
+++ b/Sources/Microcharts.Forms/Microcharts.Forms.csproj
@@ -2,21 +2,22 @@
 
     <PropertyGroup>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-        <Version>0.9.5.1</Version>
-        <AssemblyVersion>0.9.5.1</AssemblyVersion>
-        <FileVersion>0.9.5.1</FileVersion>
+        <Version>1.0.0</Version>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <FileVersion>1.0.0.0</FileVersion>
         <Title>Microcharts.Forms</Title>
-        <Description>Simple, cross-platform chart library.</Description>
-        <Copyright>Copyright 2020</Copyright>
+        <Description>Customized version of Microcharts.Forms from https://github.com/dotnet-ad/Microcharts</Description>
+        <Copyright>AxioCode © 2020</Copyright>
         <PackageLicenseUrl>https://github.com/dotnet-ad/Microcharts/blob/main/LICENSE</PackageLicenseUrl>
-        <PackageProjectUrl>https://github.com/dotnet-ad/Microcharts</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/dotnet-ad/Microcharts</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <Authors>Aloïs Deniel, Ed Lomonaco</Authors>
-        <PackageTags>xamarin ios android chart skia Forms</PackageTags>
+        <PackageProjectUrl>https://github.com/AxioCode/Microcharts</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/AxioCode/Microcharts</RepositoryUrl>
+        <RepositoryType>GitHub</RepositoryType>
+        <Authors>AxioCode, Aloïs Deniel, Ed Lomonaco</Authors>
+        <PackageTags>xamarin forms ios android chart skia</PackageTags>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>latest</LangVersion>
+        <Company>AxioCode</Company>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -31,7 +32,7 @@
     <ItemGroup>
         <PackageReference Include="SkiaSharp" Version="2.80.2" />
         <PackageReference Include="SkiaSharp.Views.Forms" Version="2.80.2" />
-        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.1905" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Microcharts\Microcharts.csproj" />
