--- a/Sources/Microcharts/Microcharts.csproj
+++ b/Sources/Microcharts/Microcharts.csproj
@@ -2,25 +2,26 @@
 
     <PropertyGroup>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-        <Version>0.9.5.1</Version>
-        <AssemblyVersion>0.9.5.1</AssemblyVersion>
-        <FileVersion>0.9.5.1</FileVersion>
-        <PackageProjectUrl>https://github.com/aloisdeniel/Microcharts/</PackageProjectUrl>
+        <Version>1.0.0</Version>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <FileVersion>1.0.0.0</FileVersion>
+        <PackageProjectUrl>https://github.com/AxioCode/Microcharts</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/aloisdeniel/Microcharts/blob/master/LICENSE</PackageLicenseUrl>
-        <RepositoryUrl>https://github.com/aloisdeniel/Microcharts/</RepositoryUrl>
+        <RepositoryUrl>https://github.com/AxioCode/Microcharts</RepositoryUrl>
         <RepositoryType>GitHub</RepositoryType>
-        <Description>Microcharts is an extremely simple charting library for a wide range of platforms (see Compatibility section below), with shared code and rendering for all of them!</Description>
-        <Authors>Aloïs Deniel, Joseph Nixon, Ed Lomonaco</Authors>
+        <Description>Customized version of Microcharts from https://github.com/dotnet-ad/Microcharts</Description>
+        <Authors>AxioCode, Aloïs Deniel, Joseph Nixon, Ed Lomonaco</Authors>
         <PackageTags>xamarin ios android chart skia</PackageTags>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <Company>Microcharts</Company>
-        <Copyright>Copyright 2020</Copyright>
+        <Company>AxioCode</Company>
+        <Copyright>AxioCode © 2020</Copyright>
         <PackageIconUrl>https://raw.githubusercontent.com/aloisdeniel/Microcharts/master/Documentation/Logo.png</PackageIconUrl>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <DocumentationFile>bin\Debug\$(TargetFramework)\Microcharts.xml</DocumentationFile>
+        <NoWarn>1701;1702;1591</NoWarn>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="SkiaSharp" Version="2.80.2" />
